--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
 #container {
+    width: 100%;
+    display: flex;
+    margin: 24px;
+}
+
+#sidebar {
+    flex-grow: 0;
+}
+
+#main-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 24px;
+    width: 100%;
+    /* margin: 24px; */
 }
 
 #question {
